--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 html, body {
-	height: 100%;
+	height: 95%;
 	width: 100%;
 	margin: 0;
 	padding: 0;
@@ -78,7 +78,7 @@ a {
 {
   width: 20px;
   height: 20px;
-  position: absolute;
+  position: fixed;
   z-index: +3;
 }
 #slider-1{
@@ -115,12 +115,12 @@ a {
 #myCanvas2{
  position: absolute;
  top: 450px;
- left: 890px; 
+ left: 900px; 
 }
 #styles{
  position: absolute;
  width: 100px;
  height: 100px;
  top: 450px;
- left: 1050px; 
+ left: 1060px; 
 }
